Add PATCH /persons/{personId}; bump dependency versions; use Java 25
